third_party/cronet/cronet.idl_c.h

typedef const char* Cronet_String;
typedef void* Cronet_RawDataPtr;
typedef void* Cronet_ClientContext;
// Forward declare interfaces.
typedef struct Cronet_Buffer Cronet_Buffer;
typedef struct Cronet_Buffer* Cronet_BufferPtr;
typedef struct Cronet_Engine Cronet_Engine;
typedef struct Cronet_Engine* Cronet_EnginePtr;
typedef struct Cronet_UrlRequest Cronet_UrlRequest;
typedef struct Cronet_UrlRequest* Cronet_UrlRequestPtr;
typedef struct Cronet_QuicHint Cronet_QuicHint;
typedef struct Cronet_QuicHint* Cronet_QuicHintPtr;
typedef struct Cronet_EngineParams Cronet_EngineParams;
typedef struct Cronet_EngineParams* Cronet_EngineParamsPtr;
// Declare enums
typedef enum Cronet_RESULT {
  Cronet_RESULT_SUCCESS = 0,
  Cronet_RESULT_ILLEGAL_ARGUMENT = -100,
  Cronet_RESULT_ILLEGAL_ARGUMENT_STORAGE_PATH_MUST_EXIST = -101,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_PIN = -102,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HOSTNAME = -103,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_METHOD = -104,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_HEADER = -105,
  Cronet_RESULT_ILLEGAL_STATE = -200,
  Cronet_RESULT_ILLEGAL_STATE_STORAGE_PATH_IN_USE = -201,
  Cronet_RESULT_ILLEGAL_STATE_CANNOT_SHUTDOWN_ENGINE_FROM_NETWORK_THREAD = -202,
  Cronet_RESULT_ILLEGAL_STATE_ENGINE_ALREADY_STARTED = -203,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_STARTED = -204,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_INITIALIZED = -205,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_INITIALIZED = -206,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_STARTED = -207,
  Cronet_RESULT_ILLEGAL_STATE_UNEXPECTED_REDIRECT = -208,
  Cronet_RESULT_ILLEGAL_STATE_UNEXPECTED_READ = -209,
  Cronet_RESULT_ILLEGAL_STATE_READ_FAILED = -210,
  Cronet_RESULT_NULL_POINTER = -300,
  Cronet_RESULT_NULL_POINTER_HOSTNAME = -301,
  Cronet_RESULT_NULL_POINTER_SHA256_PINS = -302,
  Cronet_RESULT_NULL_POINTER_EXPIRATION_DATE = -303,
  Cronet_RESULT_NULL_POINTER_ENGINE = -304,
  Cronet_RESULT_NULL_POINTER_URL = -305,
  Cronet_RESULT_NULL_POINTER_CALLBACK = -306,
  Cronet_RESULT_NULL_POINTER_EXECUTOR = -307,
  Cronet_RESULT_NULL_POINTER_METHOD = -308,
  Cronet_RESULT_NULL_POINTER_HEADER_NAME = -309,
  Cronet_RESULT_NULL_POINTER_HEADER_VALUE = -310,
  Cronet_RESULT_NULL_POINTER_PARAMS = -311,
  Cronet_RESULT_NULL_POINTER_REQUEST_FINISHED_INFO_LISTENER_EXECUTOR = -312,
} Cronet_RESULT;
CRONET_EXPORT
uint64_t Cronet_Buffer_GetSize(Cronet_BufferPtr self);
CRONET_EXPORT
Cronet_RawDataPtr Cronet_Buffer_GetData(Cronet_BufferPtr self);
// ///////////////////////
// // Concrete interface Cronet_Engine.

// // Create an instance of Cronet_Engine.
CRONET_EXPORT Cronet_EnginePtr Cronet_Engine_Create(void);
// // Set and get app-specific Cronet_ClientContext.
// CRONET_EXPORT void Cronet_Engine_SetClientContext(
//     Cronet_EnginePtr self,
//     Cronet_ClientContext client_context);
// CRONET_EXPORT Cronet_ClientContext
// Cronet_Engine_GetClientContext(Cronet_EnginePtr self);
// // Concrete methods of Cronet_Engine implemented by Cronet.
// // The app calls them to manipulate Cronet_Engine.
CRONET_EXPORT
Cronet_RESULT Cronet_Engine_StartWithParams(Cronet_EnginePtr self,
                                            Cronet_EngineParamsPtr params);
CRONET_EXPORT
bool Cronet_Engine_StartNetLogToFile(Cronet_EnginePtr self,
                                     Cronet_String file_name,
                                     bool log_all);
CRONET_EXPORT
void Cronet_Engine_StopNetLog(Cronet_EnginePtr self);
CRONET_EXPORT
Cronet_RESULT Cronet_Engine_Shutdown(Cronet_EnginePtr self);
CRONET_EXPORT
Cronet_String Cronet_Engine_GetVersionString(Cronet_EnginePtr self);
// ///////////////////////
// // Concrete interface Cronet_UploadDataSink.

// // Create an instance of Cronet_UploadDataSink.
// CRONET_EXPORT Cronet_UploadDataSinkPtr Cronet_UploadDataSink_Create(void);
// // Destroy an instance of Cronet_UploadDataSink.
// CRONET_EXPORT void Cronet_UploadDataSink_Destroy(Cronet_UploadDataSinkPtr self);
// // Set and get app-specific Cronet_ClientContext.
// CRONET_EXPORT void Cronet_UploadDataSink_SetClientContext(
//     Cronet_UploadDataSinkPtr self,
//     Cronet_ClientContext client_context);
// CRONET_EXPORT Cronet_ClientContext
// Cronet_UploadDataSink_GetClientContext(Cronet_UploadDataSinkPtr self);
// // Concrete methods of Cronet_UploadDataSink implemented by Cronet.
// // The app calls them to manipulate Cronet_UploadDataSink.
// CRONET_EXPORT
// void Cronet_UploadDataSink_OnReadSucceeded(Cronet_UploadDataSinkPtr self,
//                                            uint64_t bytes_read,
//                                            bool final_chunk);
// CRONET_EXPORT
// void Cronet_UploadDataSink_OnReadError(Cronet_UploadDataSinkPtr self,
//                                        Cronet_String error_message);
// CRONET_EXPORT
// void Cronet_UploadDataSink_OnRewindSucceeded(Cronet_UploadDataSinkPtr self);
// CRONET_EXPORT
// void Cronet_UploadDataSink_OnRewindError(Cronet_UploadDataSinkPtr self,
//                                          Cronet_String error_message);
// // Concrete interface Cronet_UploadDataSink is implemented by Cronet.
// // The app can implement these for testing / mocking.
// typedef void (*Cronet_UploadDataSink_OnReadSucceededFunc)(
//     Cronet_UploadDataSinkPtr self,
//     uint64_t bytes_read,
//     bool final_chunk);
// typedef void (*Cronet_UploadDataSink_OnReadErrorFunc)(
//     Cronet_UploadDataSinkPtr self,
//     Cronet_String error_message);
// typedef void (*Cronet_UploadDataSink_OnRewindSucceededFunc)(
//     Cronet_UploadDataSinkPtr self);
// typedef void (*Cronet_UploadDataSink_OnRewindErrorFunc)(
//     Cronet_UploadDataSinkPtr self,
//     Cronet_String error_message);
// // Concrete interface Cronet_UploadDataSink is implemented by Cronet.
// // The app can use this for testing / mocking.
// CRONET_EXPORT Cronet_UploadDataSinkPtr Cronet_UploadDataSink_CreateWith(
//     Cronet_UploadDataSink_OnReadSucceededFunc OnReadSucceededFunc,
//     Cronet_UploadDataSink_OnReadErrorFunc OnReadErrorFunc,
//     Cronet_UploadDataSink_OnRewindSucceededFunc OnRewindSucceededFunc,
//     Cronet_UploadDataSink_OnRewindErrorFunc OnRewindErrorFunc);

// ///////////////////////
// // Abstract interface Cronet_UploadDataProvider is implemented by the app.

// // There is no method to create a concrete implementation.

// // Destroy an instance of Cronet_UploadDataProvider.
// CRONET_EXPORT void Cronet_UploadDataProvider_Destroy(
//     Cronet_UploadDataProviderPtr self);
// // Set and get app-specific Cronet_ClientContext.
// CRONET_EXPORT void Cronet_UploadDataProvider_SetClientContext(
//     Cronet_UploadDataProviderPtr self,
//     Cronet_ClientContext client_context);
// CRONET_EXPORT Cronet_ClientContext
// Cronet_UploadDataProvider_GetClientContext(Cronet_UploadDataProviderPtr self);
// // Abstract interface Cronet_UploadDataProvider is implemented by the app.
// // The following concrete methods forward call to app implementation.
// // The app doesn't normally call them.
// CRONET_EXPORT
// int64_t Cronet_UploadDataProvider_GetLength(Cronet_UploadDataProviderPtr self);
// CRONET_EXPORT
// void Cronet_UploadDataProvider_Read(Cronet_UploadDataProviderPtr self,
//                                     Cronet_UploadDataSinkPtr upload_data_sink,
//                                     Cronet_BufferPtr buffer);
// CRONET_EXPORT
// void Cronet_UploadDataProvider_Rewind(
//     Cronet_UploadDataProviderPtr self,
//     Cronet_UploadDataSinkPtr upload_data_sink);
// CRONET_EXPORT
// void Cronet_UploadDataProvider_Close(Cronet_UploadDataProviderPtr self);
// // The app implements abstract interface Cronet_UploadDataProvider by defining
// // custom functions for each method.
// typedef int64_t (*Cronet_UploadDataProvider_GetLengthFunc)(
//     Cronet_UploadDataProviderPtr self);
// typedef void (*Cronet_UploadDataProvider_ReadFunc)(
//     Cronet_UploadDataProviderPtr self,
//     Cronet_UploadDataSinkPtr upload_data_sink,
//     Cronet_BufferPtr buffer);
// typedef void (*Cronet_UploadDataProvider_RewindFunc)(
//     Cronet_UploadDataProviderPtr self,
//     Cronet_UploadDataSinkPtr upload_data_sink);
// typedef void (*Cronet_UploadDataProvider_CloseFunc)(
//     Cronet_UploadDataProviderPtr self);
// // The app creates an instance of Cronet_UploadDataProvider by providing custom
// // functions for each method.
// CRONET_EXPORT Cronet_UploadDataProviderPtr Cronet_UploadDataProvider_CreateWith(
//     Cronet_UploadDataProvider_GetLengthFunc GetLengthFunc,
//     Cronet_UploadDataProvider_ReadFunc ReadFunc,
//     Cronet_UploadDataProvider_RewindFunc RewindFunc,
//     Cronet_UploadDataProvider_CloseFunc CloseFunc);

///////////////////////
// Concrete interface Cronet_UrlRequest.

// Create an instance of Cronet_UrlRequest.
CRONET_EXPORT Cronet_UrlRequestPtr Cronet_UrlRequest_Create(void);
// Destroy an instance of Cronet_UrlRequest.
CRONET_EXPORT void Cronet_UrlRequest_Destroy(Cronet_UrlRequestPtr self);
// Set and get app-specific Cronet_ClientContext.
CRONET_EXPORT void Cronet_UrlRequest_SetClientContext(
    Cronet_UrlRequestPtr self,
    Cronet_ClientContext client_context);
CRONET_EXPORT Cronet_ClientContext
Cronet_UrlRequest_GetClientContext(Cronet_UrlRequestPtr self);
CRONET_EXPORT
Cronet_RESULT Cronet_UrlRequest_Start(Cronet_UrlRequestPtr self);
CRONET_EXPORT
Cronet_RESULT Cronet_UrlRequest_FollowRedirect(Cronet_UrlRequestPtr self);
CRONET_EXPORT
Cronet_RESULT Cronet_UrlRequest_Read(Cronet_UrlRequestPtr self,
                                     Cronet_BufferPtr buffer);
CRONET_EXPORT
void Cronet_UrlRequest_Cancel(Cronet_UrlRequestPtr self);
// CRONET_EXPORT
// bool Cronet_Error_immediately_retryable_get(const Cronet_ErrorPtr self);
// CRONET_EXPORT
// int32_t Cronet_Error_quic_detailed_error_code_get(const Cronet_ErrorPtr self);

///////////////////////
// Struct Cronet_QuicHint.
CRONET_EXPORT Cronet_QuicHintPtr Cronet_QuicHint_Create(void);
CRONET_EXPORT void Cronet_QuicHint_Destroy(Cronet_QuicHintPtr self);
// Cronet_QuicHint setters.
CRONET_EXPORT
void Cronet_QuicHint_host_set(Cronet_QuicHintPtr self,
                              const Cronet_String host);
CRONET_EXPORT
void Cronet_QuicHint_port_set(Cronet_QuicHintPtr self, const int32_t port);
CRONET_EXPORT
void Cronet_QuicHint_alternate_port_set(Cronet_QuicHintPtr self,
                                        const int32_t alternate_port);
// // Cronet_QuicHint getters.
// CRONET_EXPORT
// Cronet_String Cronet_QuicHint_host_get(const Cronet_QuicHintPtr self);
// CRONET_EXPORT
// int32_t Cronet_QuicHint_port_get(const Cronet_QuicHintPtr self);
// CRONET_EXPORT
// int32_t Cronet_QuicHint_alternate_port_get(const Cronet_QuicHintPtr self);

// ///////////////////////
// // Struct Cronet_PublicKeyPins.
// CRONET_EXPORT Cronet_PublicKeyPinsPtr Cronet_PublicKeyPins_Create(void);
// CRONET_EXPORT void Cronet_PublicKeyPins_Destroy(Cronet_PublicKeyPinsPtr self);
// // Cronet_PublicKeyPins setters.
// CRONET_EXPORT
// void Cronet_PublicKeyPins_host_set(Cronet_PublicKeyPinsPtr self,
//                                    const Cronet_String host);
// CRONET_EXPORT
// void Cronet_PublicKeyPins_pins_sha256_add(Cronet_PublicKeyPinsPtr self,
//                                           const Cronet_String element);
// CRONET_EXPORT
// void Cronet_PublicKeyPins_include_subdomains_set(Cronet_PublicKeyPinsPtr self,
//                                                  const bool include_subdomains);
// CRONET_EXPORT
// void Cronet_PublicKeyPins_expiration_date_set(Cronet_PublicKeyPinsPtr self,
//                                               const int64_t expiration_date);
// // Cronet_PublicKeyPins getters.
// CRONET_EXPORT
// Cronet_String Cronet_PublicKeyPins_host_get(const Cronet_PublicKeyPinsPtr self);
// CRONET_EXPORT
// uint32_t Cronet_PublicKeyPins_pins_sha256_size(
//     const Cronet_PublicKeyPinsPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_PublicKeyPins_pins_sha256_at(
//     const Cronet_PublicKeyPinsPtr self,
//     uint32_t index);
// CRONET_EXPORT
// void Cronet_PublicKeyPins_pins_sha256_clear(Cronet_PublicKeyPinsPtr self);
// CRONET_EXPORT
// bool Cronet_PublicKeyPins_include_subdomains_get(
//     const Cronet_PublicKeyPinsPtr self);
// CRONET_EXPORT
// int64_t Cronet_PublicKeyPins_expiration_date_get(
//     const Cronet_PublicKeyPinsPtr self);

///////////////////////
// Struct Cronet_EngineParams.
CRONET_EXPORT Cronet_EngineParamsPtr Cronet_EngineParams_Create(void);
CRONET_EXPORT void Cronet_EngineParams_Destroy(Cronet_EngineParamsPtr self);