lib/src/third_party/cronet/generated_bindings.dart

// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// ignore_for_file: non_constant_identifier_names, camel_case_types
// ignore_for_file: constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings to Cronet
class Cronet {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  Cronet(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  Cronet.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int Cronet_Buffer_GetSize(
    ffi.Pointer<Cronet_BufferPtr> self,
  ) {
    return _Cronet_Buffer_GetSize(
      self,
    );
  }

  late final _Cronet_Buffer_GetSize_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_Buffer_GetSize>>(
          'Cronet_Buffer_GetSize');
  late final _dart_Cronet_Buffer_GetSize _Cronet_Buffer_GetSize =
      _Cronet_Buffer_GetSize_ptr.asFunction<_dart_Cronet_Buffer_GetSize>();

  ffi.Pointer<ffi.Void> Cronet_Buffer_GetData(
    ffi.Pointer<Cronet_BufferPtr> self,
  ) {
    return _Cronet_Buffer_GetData(
      self,
    );
  }

  late final _Cronet_Buffer_GetData_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_Buffer_GetData>>(
          'Cronet_Buffer_GetData');
  late final _dart_Cronet_Buffer_GetData _Cronet_Buffer_GetData =
      _Cronet_Buffer_GetData_ptr.asFunction<_dart_Cronet_Buffer_GetData>();

  ffi.Pointer<Cronet_EnginePtr> Cronet_Engine_Create() {
    return _Cronet_Engine_Create();
  }

  late final _Cronet_Engine_Create_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_Engine_Create>>(
          'Cronet_Engine_Create');
  late final _dart_Cronet_Engine_Create _Cronet_Engine_Create =
      _Cronet_Engine_Create_ptr.asFunction<_dart_Cronet_Engine_Create>();

  int Cronet_Engine_StartWithParams(
    ffi.Pointer<Cronet_EnginePtr> self,
    ffi.Pointer<Cronet_EngineParamsPtr> params,
  ) {
    return _Cronet_Engine_StartWithParams(
      self,
      params,
    );
  }

  late final _Cronet_Engine_StartWithParams_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_Engine_StartWithParams>>(
          'Cronet_Engine_StartWithParams');
  late final _dart_Cronet_Engine_StartWithParams
      _Cronet_Engine_StartWithParams = _Cronet_Engine_StartWithParams_ptr
          .asFunction<_dart_Cronet_Engine_StartWithParams>();

  bool Cronet_Engine_StartNetLogToFile(
    ffi.Pointer<Cronet_EnginePtr> self,
    ffi.Pointer<ffi.Int8> file_name,
    bool log_all,
  ) {
    return _Cronet_Engine_StartNetLogToFile(
          self,
          file_name,
          log_all ? 1 : 0,
        ) !=
        0;
  }

  late final _Cronet_Engine_StartNetLogToFile_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_Engine_StartNetLogToFile>>(
          'Cronet_Engine_StartNetLogToFile');
  late final _dart_Cronet_Engine_StartNetLogToFile
      _Cronet_Engine_StartNetLogToFile = _Cronet_Engine_StartNetLogToFile_ptr
          .asFunction<_dart_Cronet_Engine_StartNetLogToFile>();

  void Cronet_Engine_StopNetLog(
    ffi.Pointer<Cronet_EnginePtr> self,
  ) {
    return _Cronet_Engine_StopNetLog(
      self,
    );
  }

  late final _Cronet_Engine_StopNetLog_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_Engine_StopNetLog>>(
          'Cronet_Engine_StopNetLog');
  late final _dart_Cronet_Engine_StopNetLog _Cronet_Engine_StopNetLog =
      _Cronet_Engine_StopNetLog_ptr.asFunction<
          _dart_Cronet_Engine_StopNetLog>();

  int Cronet_Engine_Shutdown(
    ffi.Pointer<Cronet_EnginePtr> self,
  ) {
    return _Cronet_Engine_Shutdown(
      self,
    );
  }

  late final _Cronet_Engine_Shutdown_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_Engine_Shutdown>>(
          'Cronet_Engine_Shutdown');
  late final _dart_Cronet_Engine_Shutdown _Cronet_Engine_Shutdown =
      _Cronet_Engine_Shutdown_ptr.asFunction<_dart_Cronet_Engine_Shutdown>();

  ffi.Pointer<ffi.Int8> Cronet_Engine_GetVersionString(
    ffi.Pointer<Cronet_EnginePtr> self,
  ) {
    return _Cronet_Engine_GetVersionString(
      self,
    );
  }

  late final _Cronet_Engine_GetVersionString_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_Engine_GetVersionString>>(
          'Cronet_Engine_GetVersionString');
  late final _dart_Cronet_Engine_GetVersionString
      _Cronet_Engine_GetVersionString = _Cronet_Engine_GetVersionString_ptr
          .asFunction<_dart_Cronet_Engine_GetVersionString>();

  /// ////////////////////
  ffi.Pointer<Cronet_UrlRequestPtr> Cronet_UrlRequest_Create() {
    return _Cronet_UrlRequest_Create();
  }

  late final _Cronet_UrlRequest_Create_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_Create>>(
          'Cronet_UrlRequest_Create');
  late final _dart_Cronet_UrlRequest_Create _Cronet_UrlRequest_Create =
      _Cronet_UrlRequest_Create_ptr.asFunction<
          _dart_Cronet_UrlRequest_Create>();

  void Cronet_UrlRequest_Destroy(
    ffi.Pointer<Cronet_UrlRequestPtr> self,
  ) {
    return _Cronet_UrlRequest_Destroy(
      self,
    );
  }

  late final _Cronet_UrlRequest_Destroy_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_Destroy>>(
          'Cronet_UrlRequest_Destroy');
  late final _dart_Cronet_UrlRequest_Destroy _Cronet_UrlRequest_Destroy =
      _Cronet_UrlRequest_Destroy_ptr.asFunction<
          _dart_Cronet_UrlRequest_Destroy>();

  void Cronet_UrlRequest_SetClientContext(
    ffi.Pointer<Cronet_UrlRequestPtr> self,
    ffi.Pointer<ffi.Void> client_context,
  ) {
    return _Cronet_UrlRequest_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_UrlRequest_SetClientContext_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_SetClientContext>>(
          'Cronet_UrlRequest_SetClientContext');
  late final _dart_Cronet_UrlRequest_SetClientContext
      _Cronet_UrlRequest_SetClientContext =
      _Cronet_UrlRequest_SetClientContext_ptr.asFunction<
          _dart_Cronet_UrlRequest_SetClientContext>();

  ffi.Pointer<ffi.Void> Cronet_UrlRequest_GetClientContext(
    ffi.Pointer<Cronet_UrlRequestPtr> self,
  ) {
    return _Cronet_UrlRequest_GetClientContext(
      self,
    );
  }

  late final _Cronet_UrlRequest_GetClientContext_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_GetClientContext>>(
          'Cronet_UrlRequest_GetClientContext');
  late final _dart_Cronet_UrlRequest_GetClientContext
      _Cronet_UrlRequest_GetClientContext =
      _Cronet_UrlRequest_GetClientContext_ptr.asFunction<
          _dart_Cronet_UrlRequest_GetClientContext>();

  int Cronet_UrlRequest_Start(
    ffi.Pointer<Cronet_UrlRequestPtr> self,
  ) {
    return _Cronet_UrlRequest_Start(
      self,
    );
  }

  late final _Cronet_UrlRequest_Start_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_Start>>(
          'Cronet_UrlRequest_Start');
  late final _dart_Cronet_UrlRequest_Start _Cronet_UrlRequest_Start =
      _Cronet_UrlRequest_Start_ptr.asFunction<_dart_Cronet_UrlRequest_Start>();

  int Cronet_UrlRequest_FollowRedirect(
    ffi.Pointer<Cronet_UrlRequestPtr> self,
  ) {
    return _Cronet_UrlRequest_FollowRedirect(
      self,
    );
  }

  late final _Cronet_UrlRequest_FollowRedirect_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_FollowRedirect>>(
          'Cronet_UrlRequest_FollowRedirect');
  late final _dart_Cronet_UrlRequest_FollowRedirect
      _Cronet_UrlRequest_FollowRedirect = _Cronet_UrlRequest_FollowRedirect_ptr
          .asFunction<_dart_Cronet_UrlRequest_FollowRedirect>();

  int Cronet_UrlRequest_Read(
    ffi.Pointer<Cronet_UrlRequestPtr> self,
    ffi.Pointer<Cronet_BufferPtr> buffer,
  ) {
    return _Cronet_UrlRequest_Read(
      self,
      buffer,
    );
  }

  late final _Cronet_UrlRequest_Read_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_Read>>(
          'Cronet_UrlRequest_Read');
  late final _dart_Cronet_UrlRequest_Read _Cronet_UrlRequest_Read =
      _Cronet_UrlRequest_Read_ptr.asFunction<_dart_Cronet_UrlRequest_Read>();

  void Cronet_UrlRequest_Cancel(
    ffi.Pointer<Cronet_UrlRequestPtr> self,
  ) {
    return _Cronet_UrlRequest_Cancel(
      self,
    );
  }

  late final _Cronet_UrlRequest_Cancel_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_UrlRequest_Cancel>>(
          'Cronet_UrlRequest_Cancel');
  late final _dart_Cronet_UrlRequest_Cancel _Cronet_UrlRequest_Cancel =
      _Cronet_UrlRequest_Cancel_ptr.asFunction<
          _dart_Cronet_UrlRequest_Cancel>();

  /// ////////////////////
  ffi.Pointer<Cronet_QuicHintPtr> Cronet_QuicHint_Create() {
    return _Cronet_QuicHint_Create();
  }

  late final _Cronet_QuicHint_Create_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_Create>>(
          'Cronet_QuicHint_Create');
  late final _dart_Cronet_QuicHint_Create _Cronet_QuicHint_Create =
      _Cronet_QuicHint_Create_ptr.asFunction<_dart_Cronet_QuicHint_Create>();

  void Cronet_QuicHint_Destroy(
    ffi.Pointer<Cronet_QuicHintPtr> self,
  ) {
    return _Cronet_QuicHint_Destroy(
      self,
    );
  }

  late final _Cronet_QuicHint_Destroy_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_Destroy>>(
          'Cronet_QuicHint_Destroy');
  late final _dart_Cronet_QuicHint_Destroy _Cronet_QuicHint_Destroy =
      _Cronet_QuicHint_Destroy_ptr.asFunction<_dart_Cronet_QuicHint_Destroy>();

  void Cronet_QuicHint_host_set(
    ffi.Pointer<Cronet_QuicHintPtr> self,
    ffi.Pointer<ffi.Int8> host,
  ) {
    return _Cronet_QuicHint_host_set(
      self,
      host,
    );
  }

  late final _Cronet_QuicHint_host_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_host_set>>(
          'Cronet_QuicHint_host_set');
  late final _dart_Cronet_QuicHint_host_set _Cronet_QuicHint_host_set =
      _Cronet_QuicHint_host_set_ptr.asFunction<
          _dart_Cronet_QuicHint_host_set>();

  void Cronet_QuicHint_port_set(
    ffi.Pointer<Cronet_QuicHintPtr> self,
    int port,
  ) {
    return _Cronet_QuicHint_port_set(
      self,
      port,
    );
  }

  late final _Cronet_QuicHint_port_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_port_set>>(
          'Cronet_QuicHint_port_set');
  late final _dart_Cronet_QuicHint_port_set _Cronet_QuicHint_port_set =
      _Cronet_QuicHint_port_set_ptr.asFunction<
          _dart_Cronet_QuicHint_port_set>();

  void Cronet_QuicHint_alternate_port_set(
    ffi.Pointer<Cronet_QuicHintPtr> self,
    int alternate_port,
  ) {
    return _Cronet_QuicHint_alternate_port_set(
      self,
      alternate_port,
    );
  }

  late final _Cronet_QuicHint_alternate_port_set_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_QuicHint_alternate_port_set>>(
          'Cronet_QuicHint_alternate_port_set');
  late final _dart_Cronet_QuicHint_alternate_port_set
      _Cronet_QuicHint_alternate_port_set =
      _Cronet_QuicHint_alternate_port_set_ptr.asFunction<
          _dart_Cronet_QuicHint_alternate_port_set>();

  /// ////////////////////
  ffi.Pointer<Cronet_EngineParamsPtr> Cronet_EngineParams_Create() {
    return _Cronet_EngineParams_Create();
  }

  late final _Cronet_EngineParams_Create_ptr =
      _lookup<ffi.NativeFunction<_c_Cronet_EngineParams_Create>>(
          'Cronet_EngineParams_Create');
  late final _dart_Cronet_EngineParams_Create _Cronet_EngineParams_Create =
      _Cronet_EngineParams_Create_ptr.asFunction<
          _dart_Cronet_EngineParams_Create>();

  void Cronet_EngineParams_Destroy(
    ffi.Pointer<Cronet_EngineParamsPtr> self,
  ) {
    return _Cronet_EngineParams_Destroy(
      self,
    );
  }
